--- a/ContentAPI/ContentAPI/appsettings.json
+++ b/ContentAPI/ContentAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=contentdb;Integrated Security= True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
