--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          working-directory: ./ContentAPI/ContentAPI/
           context: .
-          file: /ContentAPI/ContentAPI/Dockerfile
+          file: /Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clockbox:latest
