ContentAPI now uses Docker containerized database

--- a/ContentAPI/ContentAPI/appsettings.json
+++ b/ContentAPI/ContentAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=contentdb;Integrated Security= True;"
+    "DefaultConnection": "Server=host.docker.internal;database=Contentdb;User Id=sa;Password=Database!2021;"
   },
   "Logging": {
     "LogLevel": {
