--- a/ReviewAPI/ReviewAPI/ReviewAPI.csproj
+++ b/ReviewAPI/ReviewAPI/ReviewAPI.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>901c0eac-f8c6-4c64-a27d-f42964e5f4e0</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
