--- a/ReviewAPI/ReviewAPI/appsettings.json
+++ b/ReviewAPI/ReviewAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=reviewdb;Integrated Security= True;"
+    "DefaultConnection": "Server=host.docker.internal;database=Reviewdb;User Id=sa;Password=Database!2021;"
   },
   "Logging": {
     "LogLevel": {
