--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,12 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: list directory
+        run: ls
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./ContentAPI/ContentAPI/dockerfile
+          file: ./ContentAPI/ContentAPI/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clockbox:latest
