--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: list directory
         run: |
-          cd /ContentAPI/ContentAPI/
+          cd .\ContentAPI\ContentAPI\
           ls
       - name: Build and push
         uses: docker/build-push-action@v3
