--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
       - name: list directory
         run: |
           cd .\ContentAPI\
+      - name: list new directory
+        run: |
           ls
       - name: Build and push
         uses: docker/build-push-action@v3
