--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: list directory
         run: |
-          cd .\ContentAPI\
+          cd ./ContentAPI/
       - name: list new directory
         run: |
           ls
