--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./pictureperfect/ContentAPI/ContentAPI/Dockerfile
+          file: cd ./ContentAPI/ContentAPI/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clockbox:latest
