--- a/ContentAPI/ContentAPI/appsettings.json
+++ b/ContentAPI/ContentAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=host.docker.internal;database=Contentdb;User Id=sa;Password=Database!2021;"
+    "DefaultConnection": "Server=127.0.0.1,1433;database=Contentdb;User Id=sa;Password=Database!2021;"
   },
   "Logging": {
     "LogLevel": {
