--- a/.github/workflows/dotnetReviewAPI.yml
+++ b/.github/workflows/dotnetReviewAPI.yml
@@ -14,7 +14,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: "./ReviewAPI"
+        working-directory: "./ReviewAPI/ReviewAPI"
 
     steps:
     - uses: actions/checkout@v3
