--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm init
+        cache-dependency-path: pictureperfect/mywebapp/package-lock.json
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
