--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,13 +9,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     defaults:
       run:
         working-directory: "./ContentAPI"
-
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -26,5 +23,20 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+
+  test:
+    needs: [build]
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: "./ContentAPI"
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
